# integration-sdk

./: README.md  pyproject.toml
.github/workflows/: release.yml
majordom_integration_sdk/: __init__.py  parameter_audit.py  spec_drift.py
majordom_integration_sdk/controller/: __init__.py  abstract_controller.py
majordom_integration_sdk/dev/: __init__.py  cli.py
majordom_integration_sdk/discovery/: __init__.py  ble_discovery.py  ssdp_discovery.py  zeroconf_discovery.py
majordom_integration_sdk/repository/: __init__.py  _record.py  memory.py  protocol.py  sqlite.py
majordom_integration_sdk/schemas/: __init__.py  base.py  command.py  device.py  event.py  notification.py  parameter.py
majordom_integration_sdk/testing/: __init__.py
tests/: conftest.py  test_cli.py  test_controller.py  test_dev.py  test_main_parameter.py  test_notification.py  test_parameter_audit.py  test_repository.py  test_schemas.py  test_spec_drift.py
